welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: value to6 is not a member of Int
for(i<-1 to6){
         ^