welcome.lessons.welcome.loopfor.LoopFor.scala.code
for(i<-1 to6){
	avance();
}
